--- a/Main/package.json
+++ b/Main/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-google-books",
   "version": "1.0.0",
-  "description": "",
+  "description": "Google search MERN app",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
